fixed scroll behavior so that scroll anchors are still visible after using them

--- a/index.css
+++ b/index.css
@@ -98,6 +98,7 @@
   flex-shrink: 0;
   scroll-snap-align: center;
   width: 100%;
+  scroll-margin-top: 120px;
 }
 
 .project img {
